IE6 css fixes - SLNG-1188: Create new folder background color fixed - SLNG-1190: Flash upload popups background color fixed - SLNG-1188: Flash uploads popup borders are ok in IE6 - SLNG-1192: Incorrect layout on "Add event" window in IE6 - SLNG-1207: My Sites cant delete sites in IE6 - SLNG-1206: Customise pages: pages cant be removed in IE6 - SLNG-1208: IE6 Dashboard layouts works in all combintaions - SLNG-872:  Customise dashboard doesnt look good in IE6
Other styling fixes
- SLNG-872:  Customise pages doesnt look good in IE6 
- SLNG-1204: Customise site page hor. scrollbars on default screen & buttons needs scrolling 
- SLNG-1205: Customise dashboard page hor. scrollbars on default screen

Untasked IE fixes:
- Cusomise layout: click on layout image doesnt work in IE6



git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10908 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 45842172227235856f6cd73eb593167b78dfb4a0

--- a/root/projects/slingshot/source/web/templates/site/customise-site.css
+++ b/root/projects/slingshot/source/web/templates/site/customise-site.css
@@ -11,5 +11,5 @@ h3.padded
 
 #bd
 {
-   width: 1000px;
+   width: 980px;
 }
